Fix animation on mobile

--- a/Styles/main.scss
+++ b/Styles/main.scss
@@ -296,6 +296,15 @@ article:hover {
 
 
 @media (max-width: 640px) {
+    .Elementos.seleccionado{
+        color: red;
+        transform: none;
+    }
+    
+    .Elementos.drag{
+        opacity: 0;
+    }
+
     article {
         ul{
             li{
